--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -170,9 +170,16 @@
         <div id="toast-container"></div>
     </div>
 
-    <script src="js/api.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/app.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    
+    <!-- App Scripts -->
+    <script src="js/firebase-config.js?v=4"></script>
+    <script src="js/api-firestore.js?v=4"></script>
+    <script src="js/ui.js?v=4"></script>
+    <script src="js/app.js?v=4"></script>
 </body>
 </html>
 
