--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feudalism 4 - Setup HUD</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=5">
 </head>
 <body>
     <div id="app">
@@ -176,10 +176,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     
     <!-- App Scripts -->
-    <script src="js/firebase-config.js?v=4"></script>
-    <script src="js/api-firestore.js?v=4"></script>
-    <script src="js/ui.js?v=4"></script>
-    <script src="js/app.js?v=4"></script>
+    <script src="js/firebase-config.js?v=5"></script>
+    <script src="js/api-firestore.js?v=5"></script>
+    <script src="js/ui.js?v=5"></script>
+    <script src="js/app.js?v=5"></script>
 </body>
 </html>
 
