--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feudalism 4 - Setup HUD</title>
-    <link rel="stylesheet" href="css/styles.css?v=6">
+    <link rel="stylesheet" href="css/styles.css?v=7">
 </head>
 <body>
     <div id="app">
@@ -74,7 +74,7 @@
                     <div class="stats-header">
                         <h2>Attributes</h2>
                         <div class="xp-display">
-                            <span class="xp-label">Available XP:</span>
+                            <span class="xp-label">Available Points:</span>
                             <span id="xp-available" class="xp-value">0</span>
                         </div>
                     </div>
@@ -176,10 +176,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     
     <!-- App Scripts -->
-    <script src="js/firebase-config.js?v=6"></script>
-    <script src="js/api-firestore.js?v=6"></script>
-    <script src="js/ui.js?v=6"></script>
-    <script src="js/app.js?v=6"></script>
+    <script src="js/firebase-config.js?v=7"></script>
+    <script src="js/api-firestore.js?v=7"></script>
+    <script src="js/ui.js?v=7"></script>
+    <script src="js/app.js?v=8"></script>
 </body>
 </html>
 
