--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -176,10 +176,11 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     
     <!-- App Scripts -->
-    <script src="js/firebase-config.js?v=7"></script>
-    <script src="js/api-firestore.js?v=7"></script>
-    <script src="js/ui.js?v=7"></script>
-    <script src="js/app.js?v=8"></script>
+    <script src="js/firebase-config.js?v=8"></script>
+    <script src="js/seed-data.js?v=1"></script>
+    <script src="js/api-firestore.js?v=8"></script>
+    <script src="js/ui.js?v=8"></script>
+    <script src="js/app.js?v=9"></script>
 </body>
 </html>
 
