--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feudalism 4 - Setup HUD</title>
-    <link rel="stylesheet" href="css/styles.css?v=9">
+    <link rel="stylesheet" href="css/styles.css?v=10">
 </head>
 <body>
     <div id="app">
@@ -45,10 +45,31 @@
                     </div>
                     <div class="form-group">
                         <label>Gender</label>
-                        <div class="button-group">
-                            <button class="choice-btn" data-gender="male">♂ Male</button>
-                            <button class="choice-btn" data-gender="female">♀ Female</button>
-                            <button class="choice-btn" data-gender="other">⚪ Other</button>
+                        <div id="gender-gallery" class="gender-gallery">
+                            <button class="choice-btn gender-btn" data-gender="male" title="Masculine identity">
+                                <span class="gender-icon">♂</span>
+                                <span class="gender-label">Male</span>
+                            </button>
+                            <button class="choice-btn gender-btn" data-gender="female" title="Feminine identity">
+                                <span class="gender-icon">♀</span>
+                                <span class="gender-label">Female</span>
+                            </button>
+                            <button class="choice-btn gender-btn" data-gender="transgender" title="Gender differs from birth assignment">
+                                <span class="gender-icon">⚧</span>
+                                <span class="gender-label">Trans</span>
+                            </button>
+                            <button class="choice-btn gender-btn" data-gender="hermaphrodite" title="Both masculine and feminine characteristics">
+                                <span class="gender-icon">⚥</span>
+                                <span class="gender-label">Herm</span>
+                            </button>
+                            <button class="choice-btn gender-btn" data-gender="nonbinary" title="Identity outside the gender binary">
+                                <span class="gender-icon">⚪</span>
+                                <span class="gender-label">NB</span>
+                            </button>
+                            <button class="choice-btn gender-btn" data-gender="other" title="Custom or unspecified identity">
+                                <span class="gender-icon">✧</span>
+                                <span class="gender-label">Other</span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -177,10 +198,10 @@
     
     <!-- App Scripts -->
     <script src="js/firebase-config.js?v=8"></script>
-    <script src="js/seed-data.js?v=2"></script>
-    <script src="js/api-firestore.js?v=8"></script>
-    <script src="js/ui.js?v=11"></script>
-    <script src="js/app.js?v=9"></script>
+    <script src="js/seed-data.js?v=3">
+    <script src="js/api-firestore.js?v=9">
+    <script src="js/ui.js?v=12">
+    <script src="js/app.js?v=10">
 </body>
 </html>
 
