Add 'Open in Browser' link to Setup HUD header with credentials

--- a/hud.html
+++ b/hud.html
@@ -25,6 +25,7 @@
                 <h1 class="brand-title">Feudalism 4 Setup</h1>
             </div>
             <div class="header-info">
+                <a id="open-in-browser-link" href="#" style="display: none; margin-right: var(--space-md); padding: var(--space-xs) var(--space-sm); background: var(--bg-medium); border: 1px solid var(--border-color); border-radius: 4px; color: var(--text-primary); text-decoration: none; font-size: 0.9em; transition: all 0.2s ease;" title="Open Setup HUD in external browser">🌐 Open in Browser</a>
                 <span id="user-role" class="role-badge">Player</span>
                 <span id="connection-status" class="status-dot online"></span>
             </div>
