Add multi-character selection with backend persistence - Characters section in Options, active character sync, Bridge handlers

--- a/MOAP Interface/feudalism4-HUD/hud.html
+++ b/MOAP Interface/feudalism4-HUD/hud.html
@@ -264,6 +264,13 @@
             <!-- Options Tab -->
             <section id="tab-options" class="tab-content">
                 <div class="panel">
+                    <h2>Characters</h2>
+                    <div id="characters-list" class="characters-list">
+                        <p class="placeholder-text">Loading characters...</p>
+                    </div>
+                </div>
+
+                <div class="panel">
                     <h2>Character Management</h2>
                     <div class="options-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: var(--space-md);">
                         <button id="btn-new-character-options" class="action-btn primary" style="width: 100%;">
