Implement Feudalism 4 Consumables System
- Add admin UI for consumables management (create, edit, delete, toggle disable)
- Add Consume button to HUD inventory menu for consumable items
- Implement requestConsumeItem() in HUD Bridge (LSL)
- Create Cloud Function to process consume requests with validation
- Add Buffs display panel to HUD with real-time updates
- Update Firestore rules for consumables collections
- Add functions directory with Cloud Function for consume processing

--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -223,6 +223,13 @@
                 </div>
 
                 <div class="panel">
+                    <h2>Active Buffs</h2>
+                    <div id="buffs-list" class="buffs-list">
+                        <p class="placeholder-text">No active buffs...</p>
+                    </div>
+                </div>
+
+                <div class="panel">
                     <h2>Action Slots</h2>
                     <p class="info-text">Ready items, spells, or buffs for quick activation</p>
                     <div id="action-slots" class="action-slots-grid">
@@ -315,6 +322,7 @@
                         <button class="admin-btn" data-admin="classes">⚔️ Classes</button>
                         <button class="admin-btn" data-admin="genders">⚧ Genders</button>
                         <button class="admin-btn" data-admin="vocations">📜 Vocations</button>
+                        <button class="admin-btn" data-admin="consumables">🍯 Consumables</button>
                         <button class="admin-btn" data-admin="xp">⭐ Award XP</button>
                     </div>
                 </div>
