--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -25,6 +25,8 @@
                 <h1 class="brand-title">Feudalism 4 Setup</h1>
             </div>
             <div class="header-info">
+                <button id="btn-new-character-nav" class="action-btn secondary" style="display: inline-block; margin-right: var(--space-sm); font-size: 0.9em; padding: 4px 12px; border-radius: 4px;">🆕 New Character</button>
+                <a id="open-in-browser-link" href="#" style="display: none; color: #10b981; text-decoration: none; margin-right: var(--space-sm); font-size: 0.9em; padding: 4px 8px; border: 1px solid #10b981; border-radius: 4px;">🌐 Open in Browser</a>
                 <span id="user-role" class="role-badge">Player</span>
                 <span id="connection-status" class="status-dot online"></span>
             </div>
