UX 2: Fix character selector loading and remove Character Management from Options tab

--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -295,18 +295,8 @@
 
             <!-- Options Tab -->
             <section id="tab-options" class="tab-content">
-                <div class="panel">
-                    <h2>Character Management</h2>
-                    <div class="options-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: var(--space-md);">
-                        <button id="btn-new-character-options" class="action-btn primary" style="width: 100%;">
-                            🆕 New Character
-                        </button>
-                        <button id="btn-edit-character-options" class="action-btn secondary" style="width: 100%;">
-                            ✏️ Edit Character
-                        </button>
-                    </div>
-                </div>
-
+                <!-- Character Management removed per UX 2 Spec - moved to Character tab -->
+                
                 <div class="panel">
                     <h2>Game Mode</h2>
                     <div class="mode-selector" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: var(--space-sm);">
