Fix new character creation UX: dropdown now triggers dialog, improved messaging, hide hero panel after creation starts

--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -104,7 +104,7 @@
                 <!-- Hero callout for no character -->
                 <div id="no-character-hero" class="hero-callout" style="display: none; margin-bottom: var(--space-lg); padding: var(--space-xl); background: linear-gradient(135deg, #1e3a5f 0%, #2d4a6b 100%); border: 2px solid #3a5f8f; border-radius: 8px; text-align: center;">
                     <h2 style="margin: 0 0 var(--space-md) 0; color: #fff; font-size: 1.5em;">You do not have a character yet.</h2>
-                    <p style="margin: 0 0 var(--space-lg) 0; color: #e0e0e0; font-size: 1.1em;">Click "Create New Character" in the dropdown above to begin creating your character.</p>
+                    <p style="margin: 0 0 var(--space-lg) 0; color: #e0e0e0; font-size: 1.1em;">Click the button below to begin creating your character.</p>
                     <button id="btn-create-new-hero" class="action-btn primary" style="padding: 12px 32px; font-size: 1.1em; font-weight: 600;">
                         🆕 Create New Character
                     </button>
