Add Stats step to step guide, enable/disable Save button based on dirty state

--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -86,6 +86,11 @@
                             <span class="step-name">Species</span>
                         </div>
                         <div style="color: #6b7280;">→</div>
+                        <div class="step-item" data-step="stats" style="display: flex; align-items: center; gap: 6px; cursor: pointer; padding: 4px 8px; border-radius: 4px; transition: background 0.2s;">
+                            <span class="step-marker" style="font-size: 1.2em;">○</span>
+                            <span class="step-name">Stats</span>
+                        </div>
+                        <div style="color: #6b7280;">→</div>
                         <div class="step-item" data-step="career" style="display: flex; align-items: center; gap: 6px; cursor: pointer; padding: 4px 8px; border-radius: 4px; transition: background 0.2s;">
                             <span class="step-marker" style="font-size: 1.2em;">○</span>
                             <span class="step-name">Career</span>
