UX-2: Species stat bonus system + universe mana detection fixes
Major Features:
- Implemented simplified species bonus system with 8 available points for humans
- Species base_stats now applied as 'free' bonuses (don't cost points)
- Stat minimums respect species bonuses (1 + species bonus)
- Available points calculation accounts for species bonuses properly

Bug Fixes:
- Fixed universe mana detection when creating new characters
- Fixed species magic check (now uses species.mana instead of non-existent mana_chance)
- Load universe data when creating/loading characters
- Fixed channel 0 routing issues in HUD scripts (Paychest, MOAP, Stats)
- Removed dead fGivePay handler from HUD-Stats
- Fixed 'Save Character' button not enabling on field changes
- Fixed character creation flow with temporary dropdown entry
- Added missing Universe and Consumables admin buttons

LSL Changes:
- HUD-Paychest: Fixed bridge communication to use FS_BRIDGE_CHANNEL
- HUD-MOAP: Fixed SET_ACTIVE_CHARACTER and GET_ACTIVE_CHARACTER routing
- HUD-Stats: Removed legacy fGivePay handler and UPDATE_CURRENCY on channel 0
- HUD-Core: Updated comments to reflect fGivePay removal
- HUD-Main: Centralized LSD reset logic
- Paychest (in-world): Debug mode enabled for troubleshooting

MOAP Changes:
- Updated calculateAvailablePoints() with species bonus logic
- Added getStatMinimum() helper function
- Updated onStatChange() to respect species minimums
- Fixed species selection to load universe data
- Fixed mana detection logic (species.mana > 0)
- Added Universe and Consumables admin UI buttons
- Character selector now shows temporary 'âœï¸ New Character (unsaved)' entry
- All character field changes now properly set dirty flag

--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -398,10 +398,12 @@
                     <h2>Administration</h2>
                     <div class="admin-nav">
                         <button class="admin-btn" data-admin="users">👥 Users</button>
+                        <button class="admin-btn" data-admin="universes">🌌 Universes</button>
                         <button class="admin-btn" data-admin="species">🐉 Species</button>
                         <button class="admin-btn" data-admin="classes">⚔️ Classes</button>
                         <button class="admin-btn" data-admin="genders">⚧ Genders</button>
                         <button class="admin-btn" data-admin="vocations">📜 Vocations</button>
+                        <button class="admin-btn" data-admin="consumables">🧪 Consumables</button>
                         <button class="admin-btn" data-admin="xp">⭐ Award XP</button>
                     </div>
                 </div>
