Implement admin functions: Grant XP, Give Coins, Give Item + F3 XP compatibility
- Fix F3 XP compatibility: Change 'add xp' to 'gainXP' in HUD - Main.lsl
- Add ADD_XP command handler to Bridge - Characters for character-based XP grants
- Add MOAP admin UI for Grant XP, Give Coins, and Give Item
- Add admin panel buttons in hud.html
- Update API.js with new admin endpoints
- Block currency items in Give Item (gold/silver/copper coin)
- Allow materials like gold ore, silver ore, copper ore
- Update admin XP system documentation

--- a/MOAP Interface/hud.html
+++ b/MOAP Interface/hud.html
@@ -405,6 +405,8 @@
                         <button class="admin-btn" data-admin="vocations">📜 Vocations</button>
                         <button class="admin-btn" data-admin="consumables">🧪 Consumables</button>
                         <button class="admin-btn" data-admin="xp">⭐ Award XP</button>
+                        <button class="admin-btn" data-admin="givecoins">💰 Give Coins</button>
+                        <button class="admin-btn" data-admin="giveitem">📦 Give Item</button>
                     </div>
                 </div>
 
